syntax = "proto3";

package grpcTest;

service GrpcTest {
  rpc TestNoAuth (Request) returns (Reply) {}
  rpc TestAuth (Request) returns (Reply) {}
  rpc TestAuthAdmin (Request) returns (Reply) {}
}

message Request {
  string arg = 1;
}

message Reply {
  string message = 1;
}